Move EngineSpecificMethodContext into KNNMethod
Moving the EngineSpecificMethodContext into the KNNMethod class.
EngineSpecificMethodContext is mainly used during search to provide
parameter validation/configure dynamic updates. Moving into KNNMethod
will encapsulate the structure of the method into one class.

Signed-off-by: John Mazanec <jmazane@amazon.com>